Fix for bug#10936: Cluster engine shows wrong key value for duplicate key error